--- a/myconnectome/timeseries/Make_timeseries_plots.Rmd
+++ b/myconnectome/timeseries/Make_timeseries_plots.Rmd
@@ -111,9 +111,11 @@ for (varnum in 1:(dim(datamat)[2]-1)) {
 ```{r netdatModel}
 
 datamat=load_network_data() 
-meancorsim=read.table(sprintf("%s/rsfmri/corrsim_mean.txt"))$V1
+meancorsim=read.table(sprintf("%s/rsfmri/corrsim_mean.txt",basedir))$V1
 datamat=cbind(datamat[,1:2],meancorsim,datamat$date)
+names(datamat)=c('modularity_weighted','eff_weighted','meancorrsim','date')
 
+head(datamat)
 #datamat=subset(datamat,select=c(modularity_weighted,eff_weighted,date))
 varname='netdat'
 sample_spacing=1
@@ -151,7 +153,7 @@ p_fdr=matrix(p_fdr,length(p_fdr)/2,2)
 pvals=as.data.frame(pvals)
 pvals[,3:4]=p_fdr
 names(pvals)=c('mean','var(resid)','Linear trend (p-val)','Poly trend (p-val)')
-row.names(pvals)=names(datamat)[1:2]
+row.names(pvals)=names(datamat)[1:3]
 
 kable(pvals)
 if (save_latex) {
