--- a/myconnectome/timeseries/Make_Timeseries_Heatmaps.Rmd
+++ b/myconnectome/timeseries/Make_Timeseries_Heatmaps.Rmd
@@ -5,21 +5,15 @@ date: "November 1, 2014"
 output: html_document
 ---
 
-Generate the timeseries heatmap figure for the MyConnectome paper (Figure 2).
+## Timeseries heatmap figures for the MyConnectome dataset
 
-Note:  Because of the way that knitr handles large figures, the captions in these figures are cut off.  The figures for the paper were generated outside of knitr in order to make the full legends visible.
 
-First, load the necessary libraries:
-
-```{r}
+```{r setup, message=FALSE,echo=FALSE, warning=FALSE}
 basedir=Sys.getenv('MYCONNECTOME_DIR')
-
+save_files=FALSE
 
 library(gplots)
-```
 
-####Load and set up the data 
-```{r}
 behav=load_behav_data()
 wincorr=load_fmri_data('wincorr')
 netdata=load_network_data()
@@ -29,16 +23,13 @@ xvars=c('panas.positive','panas.negative','panas.fatigue','afterscan.Anxietyduri
 behav_keep=subset(behav,select=c(xvars,'date'))
 behav_keep$FedFasted=behav$TuesThurs
 behav_keep$FedFasted[is.na(behav_keep$FedFasted)]=1
-```
 
-Give more interepretable names to the variables
-```{r}
 behav_names=c('positive mood','negative mood','fatigue','anxiety during scan','diastolic BP','pulse','systolic BP','sleep quality (rating)','soreness','alcohol intake','gut health','psoriasis severity','stress','time outdoors','mean outdoor temperature','email: categorical-dynamic index','email: negative emotion','email:positive emotion','sleep (ZEO ZQ)','fed vs. fasted')
 ```
 
-#### Generate the heatmap for behavioral data
+#### Heatmap for behavioral data
 
-```{r}
+```{r beahv, fig.width=16, fig.height=12,message=FALSE,echo=FALSE, warning=FALSE}
 behav_dates=c(format(behav$date[1],'%Y-%m'))
 anchor=behav$date[1]
 for (i in 2:length(behav$date)) {
@@ -51,20 +42,22 @@ for (i in 2:length(behav$date)) {
 	}
 b=subset(behav_keep,select=-c(date))
 
-xmar=8
-ymar=6
+xmar=10
+ymar=16
 
 heatmap.2(t(as.matrix(b)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=behav_names,labCol=behav_dates)
 
-pdf(file=sprintf('%s/timeseries/behav_heatmap.pdf',basedir),width=16,height=10)
-heatmap.2(t(as.matrix(b)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=behav_names,labCol=behav_dates)
-dev.off()
+if (save_files) {
+  pdf(file=sprintf('%s/timeseries/behav_heatmap.pdf',basedir),width=16,height=10)
+  heatmap.2(t(as.matrix(b)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=behav_names,labCol=behav_dates)
+  dev.off()
+}
 
 ```
 
-#### Make heatmap for within-network connectivity
+#### Heatmap for within-network connectivity
 
-```{r}
+```{r wincorr, fig.width=16, fig.height=12, message=FALSE,echo=FALSE, warning=FALSE}
 w=subset(wincorr,select=-c(date))
 wincorr_names=c('default mode','second visual','fronto-parietal','first visual','dorsal attention','ventral attention','salience','cingulo-opercular','somatomotor','fronto-parietal-2','medial parietal','parieto-occipital')
 
@@ -81,16 +74,17 @@ for (i in 2:length(wincorr $date)) {
 
 heatmap.2(t(as.matrix(w)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=wincorr_names,labCol=scan_dates,key=FALSE)
 
-pdf(file=sprintf('%s/timeseries/wincorr_heatmap.pdf',basedir),width=16,height=10)
-heatmap.2(t(as.matrix(w)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=wincorr_names,labCol=scan_dates,key=FALSE)
-dev.off()
-
+if (save_files) {
+  pdf(file=sprintf('%s/timeseries/wincorr_heatmap.pdf',basedir),width=16,height=10)
+  heatmap.2(t(as.matrix(w)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=wincorr_names,labCol=scan_dates,key=FALSE)
+  dev.off()
+}
 ```
 
 
-#### Make heatmap for WGCNA data
+#### Heatmap for WGCNA gene expression modules
 
-```{r}
+```{r wgcna, fig.width=16, fig.height=12, message=FALSE,echo=FALSE, warning=FALSE}
 rnaseq_wgcna=load_rnaseq_data(limit_ME_to_enriched=TRUE)
 rna=subset(rnaseq_wgcna,select=-c(date))
 draw_dates=c(format(rnaseq_wgcna$date[1],'%Y-%m'))
@@ -106,11 +100,12 @@ for (i in 2:length(rnaseq_wgcna$date)) {
 
 heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(xmar,ymar),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=names(rna),labCol=draw_dates,key=FALSE)
 
-pdf(file=sprintf('%s/timeseries/wgcna_heatmap.pdf',basedir),width=16,height=10)
-heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=names(rna),labCol=draw_dates,key=FALSE)
+if (save_files) {
+  pdf(file=sprintf('%s/timeseries/wgcna_heatmap.pdf',basedir),width=16,height=10)
+  heatmap.2(t(as.matrix(rna)),trace='row',scale='row',margins=c(10,16),dendrogram='row',Colv=FALSE,na.rm=TRUE,na.color='gray',tracecol='black',linecol=FALSE,labRow=names(rna),labCol=draw_dates,key=FALSE)
 
-dev.off()
-
+  dev.off()
+}
 ```
 
 
