--- a/myconnectome/timeseries/Make_combined_timeseries_table.Rmd
+++ b/myconnectome/timeseries/Make_combined_timeseries_table.Rmd
@@ -3,6 +3,8 @@ title: "Combined timeseries table"
 output: html_document
 ---
 
+## Combined timeseries table for the MyConnectome study
+
 The 40 strongest associations between variables in the Myconnectome data set are listed here, in order of increasing FDR-corrected p-value derived from the ARIMA model.  Associations were excluded if they had an absolute Pearson r $<$ 0.3, which likely reflected degeneracy of the timeseries mode. In addition,  associations were excluded within variable sets for WGCNA, metabolomics, and between-network connectivity due to high numbers of associations within those variable sets, in order to focus more clearly on candidate relationships between variable sets.  
 
 ```{r, results='asis',echo=FALSE}
@@ -28,19 +30,20 @@ for (r in resultfiles) {
     data=rbind(data,df)
     }
 }
-cat(dim(data))
+cat(sprintf('Total number of variables:%d',dim(data)[1]))
 data$arima.p[is.na(data$arima.p)]=1
 data$pval_bh=p.adjust(data$arima.p,method='BH')
 data$pval_bonf=p.adjust(data$arima.p,method='bonferroni')
 data_full=data
-data=data[abs(data$cor.val)>0.3,]
+data=data[data$cor.val>0.3,]
 
-idx=order(data$pval_bh)
+idx=order(data$xvartype) 
 
 data=data[idx,]
 print(kable(data[data$pval_bonf<0.05,c(12,1,13,2,3,4,10,11,14)],row.names=FALSE))
 
-kl=kable(data[data$pval_bonf<0.05,c(12,1,13,2,3,4,10,11,14)],row.names=FALSE,format='latex')
+kl=kable(data[data$pval_bonf<0.05,c(12,1,13,2,3,4,10,14)],row.names=FALSE,
+         digits=c(1,1,1,1,3,2,0,4),format='latex')
 write(kl,file=sprintf('%s/timeseries/combined_timeseries_table.tex',basedir))
 
 ```
