Fixed could not find function "zoo" when calling lines 90-97

--- a/myconnectome/timeseries/timeseries_analyses.Rmd
+++ b/myconnectome/timeseries/timeseries_analyses.Rmd
@@ -27,6 +27,7 @@ The variables listed in each table are:
 ```{r setup,message=FALSE,echo=FALSE, warning=FALSE}
 library(forecast)
 library(knitr)
+library(zoo)
 
 
 basedir=Sys.getenv('MYCONNECTOME_DIR')
